--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<script  src="js/main.js"></script>
 	</head>
 	<body>
-		
+	<div id="texto">
+		Aqui se carga el texto
+	</div>
+	<img src="descarga.jfif"></img>
 		<a href="javascript:cargar()">Haz click</a>
 	</body>
 </html>
