--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		Aqui se carga el texto
 	</div>
 	<img src="descarga.jfif"></img>
-		<a href="javascript:cargar()">Haz click</a>
+		<a href="javascript:cargar()">Haz click</a><br>
+		<div id="texto">
+		hola jaja rama pruebas
+	</div>
 	</body>
 </html>
