--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<img src="descarga.jfif"></img>
 		<a href="javascript:cargar()">Haz click</a><br>
 		<div id="texto">
-		hola jaja rama pruebas
+		hola jaja rama pruebas dsfs
 	</div>
 	</body>
 </html>
